fix: adds meta name to html to fix scaling on mobile devices

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -47,7 +47,7 @@ html {
     align-items: center;
 
     .input-section__title {
-        font-size: 15px;
+        font-size: 1rem;
         text-align: center;
         font-weight: bold;
     }
